[gd_scene load_steps=4 format=3 uid="uid://c0wiiuanid2fw"]

[ext_resource type="Script" path="res://src/ui/components/custom_slider/custom_background_slider.gd" id="1_vic7d"]
[ext_resource type="Texture2D" uid="uid://51ovf3ffkhmg" path="res://assets/ui/BackgroundHUE.png" id="2_8fq6a"]
[ext_resource type="Texture2D" uid="uid://bki5u6balli2k" path="res://assets/ui/SliderHandle.png" id="3_yably"]

[node name="CustomBackgroundSlider" type="VBoxContainer"]
custom_minimum_size = Vector2(0, 65)
offset_right = 198.0
offset_bottom = 65.0
script = ExtResource("1_vic7d")
slider_type = 2

[node name="Label_Title" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0.192157, 0.192157, 0.192157, 1)
theme_override_font_sizes/font_size = 12
text = "CUSTOM SLIDER NAME"

[node name="TextureRect_Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
texture = ExtResource("2_8fq6a")
expand_mode = 1

[node name="Control_Grabber" type="Control" parent="TextureRect_Background"]
anchors_preset = 0
mouse_filter = 2

[node name="TextureRect_Grabber" type="TextureRect" parent="TextureRect_Background/Control_Grabber"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 0
offset_left = -11.0
offset_top = -2.0
offset_right = 11.0
offset_bottom = 42.0
mouse_filter = 2
texture = ExtResource("3_yably")
expand_mode = 5
stretch_mode = 4

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="gui_input" from="TextureRect_Background" to="." method="_on_texture_rect_background_gui_input"]
